# pomodoro-timer-cli

./: Cargo.toml  README.md
src/: main.rs  pomodoro.rs
src/utitlites/: center.rs  change_state.rs  get_text.rs  mod.rs
src/utitlites/keybinds/: keybinds.rs
src/utitlites/play_sound/: mod.rs  play_sound.rs
src/utitlites/state_text/: get_state_text.rs  mod.rs  print_state.rs
