[package]
name = "pomodoro-timer-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Vaaris16/pomodoro-timer-cli.git"
description = "A simple Pomodoro Timer right in your terminal built in rust. Uses figlet-rs to render an ASCII timer in your terminal and plays an alarm when state changes."
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
figlet-rs = "1.0.0"
rodio = { version = "0.22.2", default-features = false, features = ["mp3", "playback"] }
